--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ ol, ul {
 }
 
 img{ border:none;}
+
+ul > li > a{ color: inherit; text-decoration: none;}
 /* ---------------------------------------------- */
 
 /* Generl element and classes */
@@ -38,36 +40,58 @@ div{
 /* ---------------------------------------------- */
 
 header{    
-    background: url('images/header_bg.png') repeat-x;    
-    position: relative;
-    height: 250px;    
+    background: url('images/header_bg.png') repeat-x;       
+    height: 125px;    
+    width: 100%;     
+    text-align: center; 
 }
 
-header > .search-bar{
-border-color:red;
-position: absolute;
-left: 30px;
-top: 10px;
+header > .group{ 
+   display: inline-block; 
 }
 
-header > .search-bar form{
+header .search-bar{
+   border-color:red;
+    float: left;
+    clear: right;
+}
+
+header .search-bar form{
   display: inline-block;
 }
 
-header > .logo{
+header .logo{
  /* position: absolute;
   top:30px;
   right: 10%;   not finished*/
   float: right;
+  margin-top: 25px;
 }
 
 /*navgation*/
-header > nav ul
-{
-  text-align: center;
+header > .group > nav
+{  
+  float: left;
+  clear: left;
+  max-width:650px;
 }
-header > nav ul li{
+header > .group > nav > ul
+{
+  margin-top: 60px;
+}
+header > .group > nav > ul > li{
     display: inline-block;
    height: 20px; 
-   margin-top: 80px;  
+   color:white;
+   cursor: pointer;     
+}
+header > .group > nav > ul > li > a:hover{ color: blue;}
+
+header > .group > nav > ul > li::after{ 
+    content: "|";
+    color: silver;
+  }
+
+header > .group > nav > ul > li a{
+  padding-left: 7px;
 }
