add fotter style - fixed position

--- a/style.css
+++ b/style.css
@@ -95,3 +95,37 @@ header > .group > nav > ul > li::after{
 header > .group > nav > ul > li a{
   padding-left: 7px;
 }
+
+
+/*navgation*/
+footer{
+  background-color: black;
+  text-align:center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+footer > nav
+{    
+  display: inline-block; 
+}
+footer > nav > ul
+{
+  margin-top: 10px;
+}
+footer > nav > ul > li{
+    display: inline-block;
+   height: 20px; 
+   color:white;
+   cursor: pointer;     
+}
+footer > nav > ul > li > a:hover{ color: blue;}
+
+footer > nav > ul > li::after{ 
+    content: "|";
+    color: silver;
+  }
+
+footer >  nav > ul > li a{
+  padding-left: 2px;
+}
