--- a/style.css
+++ b/style.css
@@ -97,11 +97,12 @@ header .logo {
 header>.group>nav {
     float: left;
     clear: left;
-    max-width: 650px;
+    max-width: 732px;
 }
 
 header>.group>nav>ul {
-    margin-top: 60px;
+    margin-top: 45px;
+    height: 33px;
 }
 
 header>.group>nav>ul>li {
@@ -120,17 +121,25 @@ header>.group>nav>ul>li::after {
     color: silver;
 }
 
+header>.group>nav>ul>li:last-child::after {
+    content: "";
+}
+
 header>.group>nav>ul>li a {
-    padding-left: 7px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 header>.group>nav>ul>li>a.home {
     display: inline-block;
     width: 16px;
     height: 20px;
-    background: url('images/menu_home.png') no-repeat;
+    background: url(images/menu_home.png) no-repeat;
     background-position-x: -17px;
     background-position-y: 3px;
+    padding: 0;
+    margin-left: 7px;
+    margin-right: 7px;
 }
 
 header>.group>nav>ul>li>a.home:hover {
