--- a/style.css
+++ b/style.css
@@ -159,15 +159,22 @@ header>.group>nav>ul>li:last-child::after {
 header>.group>nav>ul>li a {
     padding-left: 10px;
     padding-right: 10px;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+header>.group>nav>ul>li a:hover {
+    color: #005ca0;
+    text-decoration: underline;
 }
 
 header>.group>nav>ul>li>a.home {
     display: inline-block;
-    width: 16px;
+    width: 17px;
     height: 20px;
     background: url(images/menu_home.png) no-repeat;
     background-position-x: -17px;
-    background-position-y: 3px;
+    background-position-y: 5px;
     padding: 0;
     margin-left: 7px;
     margin-right: 7px;
